--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
+</head>
+<body>
+  <header>
+    <h1>My Name</h1>
+    <p>A brief introduction to yourself and your work</p>
+    <nav>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project-grid">
+      <article class="project">
+        <img src="project1.jpg" alt="Project 1">
+        <h3>Project 1 Title</h3>
+        <p>Brief description of project 1</p>
+        <a href="#">View Project</a>
+      </article>
+      <article class="project">
+        <img src="project2.jpg" alt="Project 2">
+        <h3>Project 2 Title</h3>
+        <p>Brief description of project 2</p>
+        <a href="#">View Project</a>
+      </article>
+      <!-- Add more project articles here -->
+    </div>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <form action="#" method="post">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email">
+      <label for="message">Message:</label>
+      <textarea id="message" name="message"></textarea>
+      <button type="submit">Submit</button>
+    </form>
+  </section>
+
+  <footer>
+    <p>&copy; 2024 My Name. All rights reserved.</p>
+  </footer>
+</body>
+</html>Hello World
