--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My GitHub Pages Site</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-  <h1>Hello world!</h1>
-  <p>Welcome to my GitHub Pages site!</p>
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+        <p>Hi, I'm Mufasa. Check out my projects below.</p>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Introduce yourself here. Mention your skills, experience, and interests.</p>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <p>Showcase your projects here. Include project descriptions, technologies used, and links to GitHub repositories or live demos.</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Provide your contact information here, such as email, LinkedIn, or GitHub profile links.</p>
+    </section>
+
+    <footer>
+        <p>&copy; [Year] [Your Name]. All rights reserved.</p>
+    </footer>
 </body>
 </html>
