--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
 
     <footer>
-        <p>&copy; [Year] [Your Name]. All rights reserved.</p>
+        <p>&copy; 2025 axnasim All rights reserved.</p>
     </footer>
 </body>
 </html>
