--- a/index.html
+++ b/index.html
@@ -9,26 +9,43 @@
 <body>
     <header>
         <h1>Welcome to My Portfolio</h1>
-        <p>Hi, I'm Mufasa. Check out my projects below.</p>
+        <p>Hi, I'm Alex Newman. Check out my projects below.</p>
     </header>
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Introduce yourself here. Mention your skills, experience, and interests.</p>
+        <p>I’m a full-stack developer with a passion for building responsive, user-friendly web applications. I specialize in JavaScript, React, Node.js, and cloud technologies like Azure and AWS.</p>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
-        <p>Showcase your projects here. Include project descriptions, technologies used, and links to GitHub repositories or live demos.</p>
+        <ul>
+            <li>
+                <strong>Weather App:</strong> A React-based app that displays real-time weather using the OpenWeather API.
+                <br>
+                <a href="https://github.com/yourusername/weather-app" target="_blank">GitHub Repo</a> |
+                <a href="https://weatherapp.example.com" target="_blank">Live Demo</a>
+            </li>
+            <li>
+                <strong>Portfolio Website:</strong> This very site, showcasing my work and contact info.
+                <br>
+                <a href="https://github.com/yourusername/portfolio" target="_blank">GitHub Repo</a> |
+                <a href="https://yourdomain.com" target="_blank">Live Site</a>
+            </li>
+        </ul>
     </section>
 
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Provide your contact information here, such as email, LinkedIn, or GitHub profile links.</p>
+        <p>
+            📧 Email: <a href="mailto:alex.newman@example.com">alex.newman@example.com</a><br>
+            🔗 LinkedIn: <a href="https://www.linkedin.com/in/alexnewman" target="_blank">My LinkedIn</a><br>
+            💻 GitHub: <a href="https://github.com/alexnewman" target="_blank">My GitHub</a>
+        </p>
     </section>
 
     <footer>
-        <p>&copy; 2025 axnasim All rights reserved.</p>
+        <p>&copy; 2025 Alex Newman. All rights reserved.</p>
     </footer>
 </body>
 </html>
