--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>I’m a tech enthusiast with a passion for building engineering teams and high-growth scalable platforms.</p>
+        <p>I am a hands-on technology leader who combines strong technical expertise with a passion for building successful teams. I architect scalable solutions, enable developer platforms, and apply AI/ML techniques to solve complex business challenges leveraging enterprise-grade cloud environments.</p>
         <p>I specialize in cloud technologies AWS, Azure, and GCP.</p>
     </section>
 
