--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <h2>Contact Me</h2>
         <p>
             📧 Email: <a href="mailto:mufasa@lion.king">mufasa@lion.king</a><br>
-            🔗 LinkedIn: <a href="https://www.linkedin.com/in/alexnewman" target="_blank">My LinkedIn</a><br>
-            💻 GitHub: <a href="https://github.com/alexnewman" target="_blank">My GitHub</a>
+            🔗 LinkedIn: <a href="https://www.linkedin.com/" target="_blank">My LinkedIn</a><br>
+            💻 GitHub: <a href="https://github.com/" target="_blank">My GitHub</a>
         </p>
     </section>
 
