--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <h2>Projects</h2>
         <ul>
             <li>
-                <strong>Weather App:</strong> A React-based app that displays real-time weather using the OpenWeather API.
+                <strong>Linux Stuff </strong> All the linux commands.
                 <br>
-                <a href="https://github.com/yourusername/weather-app" target="_blank">Coming Soon!</a> |
-                <a href="https://weatherapp.example.com" target="_blank">Coming Soon!</a>
+                <a href="linux/linux-commands.docx" target="_blank">Click Me!</a> |
+                <!--a href="https://weatherapp.example.com" target="_blank">Coming Soon!</a-->
             </li>
             <li>
                 <strong>Portfolio Website:</strong> This very site, showcasing my work and contact info.
