--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>Projects</h2>
         <ul>
             <li>
-                <strong>Linux Stuff </strong> All the linux commands.
+                <strong>Linux Stuff </strong>
                 <br>
                 <a href="linux/linux-commands.docx" target="_blank">Click Me!</a> |
                 <!--a href="https://weatherapp.example.com" target="_blank">Coming Soon!</a-->
