--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li>
                 <strong>Linux Stuff </strong>
                 <br>
-                <a href="linux/linux-commands.docx" target="_blank">Click Me!</a> |
+                <a href="linux/linux-commands.docx" target="_blank" style="margin-left: 20px;">Click Me! </a> 
                 <!--a href="https://weatherapp.example.com" target="_blank">Coming Soon!</a-->
             </li>
             <li>
