--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
-        <p>Hi, I'm Mufasa. Check out my projects below.</p>
+        <h1>Welcome to Tekbytz</h1>
+        <!--p>Hi, I'm Mufasa. Check out my projects below.</p-->
         <button id="theme-toggle">Toggle Theme</button>
     </header>
 
