--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <button id="theme-toggle">Toggle Theme</button>
     </header>
 
-    <section id="about">
-        <h2>About Me</h2>
+    <section id="Me">
+        <h2>Me</h2>
         <p>I am a builder, mentor and strategic partner with a passion for grunt work. Collaboration and technical dives are cores of my engineering work to rollout processes for fast growing clients</p>
         <!--hands-on technology leader who combines strong technical expertise with a passion for building successful teams. I architect scalable solutions, enable developer platforms, and apply AI/ML techniques to solve complex business challenges leveraging enterprise-grade cloud environments.</p-->
     </section>
