--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
     <section id="Me">
         <h2>Me</h2>
-        <p>I am a builder, mentor and strategic partner with a passion for grunt work. Collaboration and technical dives are cores of my engineering work to rollout processes for fast growing clients</p>
+        <p>I am a builder, mentor and strategic partner with a passion for grunt work. Collaboration and technical dives are cores of my engineering work to rollout processes for fast growing startups and clients</p>
         <!--hands-on technology leader who combines strong technical expertise with a passion for building successful teams. I architect scalable solutions, enable developer platforms, and apply AI/ML techniques to solve complex business challenges leveraging enterprise-grade cloud environments.</p-->
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
-        <ul>
+        <!--ul-->
             <li>
                 <strong>Linux Stuff </strong>
                 <br>
@@ -34,7 +34,7 @@
                 <a href="https://github.com/yourusername/portfolio" target="_blank">GitHub Repo</a> |
                 <a href="https://yourdomain.com" target="_blank">Live Site</a>
             </li>
-        </ul>
+    <!--/ul-->
     </section>
 
     <section id="contact">
