changed index.html header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Tekbytz</h1>
+        <h1>Tekbytz</h1>
         <!--p>Hi, I'm Mufasa. Check out my projects below.</p-->
         <button id="theme-toggle">Toggle Theme</button>
     </header>
